wordpress/base/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: wordpress-ui
  template:
    metadata:
      labels:
        app: wordpress-ui
    spec:
      containers:
        - image: wordpress-ui-img
          name: wordpress-ui
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
        - image: nginx:latest
          name: nginx
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
