wordpress/base/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  annotations:
    external-dns.alpha.kubernetes.io/ingress-hostname-source: "defined-hosts-only"
spec:
  ingressClassName: nginx-internal
  rules:
  - host: ui.nowhere.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-ui
            port:
              number: 80
